# isotrieve

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  aecp_agent_demo.py  debug_aecp.py  evaluate_aecp.py  evaluate_methods.py  reproduce_warning.py  test_retrieval.py
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml  release.yml
aecp-npm/: README.md  package-lock.json
aecp-npm/benchmarks/: benchmark.ts
aecp-npm/examples/auto-negotiation/: index.ts  package.json
aecp-npm/examples/interactive-demo/: index.html
aecp-python/: CITATION.cff  CLAIMS.md  README.md  RELEASE_NOTES.md  generate_graphs_from_data.py  pyproject.toml
aecp-python/aecp/: __init__.py  communication.py  debug.py  matrix.py  negotiation.py  protocol.py
aecp-python/aecp/integrations/: agent_framework.py  base.py
aecp-python/aecp/patterns/: cost_optimizer.py
aecp-python/aecp_demo/: main.py  setup.py
aecp-python/examples/: auto_negotiation.py  multi_agent_rag.py
aecp-python/integrations/langchain/: README.md  setup.py
aecp-python/integrations/langchain/src/aecp_langchain/: __init__.py  embeddings.py
aecp-python/integrations/langchain/tests/: test_embeddings.py
aecp-python/src/aecp/: __init__.py  cli.py  cli_doctor.py  cli_gate.py  cli_report.py  migrate.py  recalibration.py  reranking.py  serve.py
aecp-python/src/aecp/adapters/: base.py  chroma.py  langchain.py  pinecone.py  qdrant.py
aecp-python/src/aecp/calibration/: calib_v1.py  corpus.py  planner.py
aecp-python/src/aecp/mapping/: base.py  linear.py  mlp.py  registry.py
aecp-python/src/aecp/providers/: base.py  cached.py  cohere.py  factory.py  gemini.py  openai.py  sentence_transformers.py  voyage.py
aecp-python/src/aecp/quality/: gate.py  metrics.py
aecp-python/src/aecp/reporting/: html_report.py
aecp-python/src/aecp/stores/: base.py  numpy_files.py  qdrant_store.py
aecp-python/test_results/: README.md  incremental_calibration_20260204_1507.json  transfer_comparison_10k_20260206_030159.json
aecp-python/tests/: fakes.py  test_cached.py  test_chroma_adapter.py  test_cli.py  test_cli_new_commands.py  test_gate.py  test_langchain_adapter.py  test_large_vocab_incremental.py  test_mapping.py  test_migrate.py  test_recalibration.py  test_reranking.py  test_transfer_comparison.py
aecp-website/: .gitignore  README.md  docs.html  index.html  performance.html  playground.html  protocol.html
aecp-website/css/: docs.css  playground.css  style.css
aecp-website/js/: docs.js  main.js  performance-charts.js  playground.js  protocol-charts.js
benchmarks/: README.md  run_benchmark.py
chroma/: enrichment_service.py
demos/: cli_demo.py
docs/: AECP_TECHNICAL_OVERVIEW.md  RFC_AECP_001.md
examples/: 01_basic_transfer.py  02_collaborative_rag.py
files/: PROJECT_SUMMARY.md  README.md  autonomous_agent.py  config.example.json  enhanced_agent.py  examples.py  quick_start.py  requirements.txt  run_agent.sh
integrations/langchain/: README.md  aecp_langchain.py
isotrieve-python/: CLAIMS.md  README.md
isotrieve-python/src/isotrieve/: cli.py  cli_gate.py
my_autonomous_agent/: agent.py  dev_agent.py  instructions.md  state.json  user_instructions.md  walkthrough.md
poc/: optimization_experiments.py  protocol.py  run_corpus_optimization.py  run_enhanced_poc.py  run_incremental_poc.py
spec/: RFC-001-AECP.md
verification/: VERIFICATION_REPORT.md
